# EnhancedForest

./: .gitignore  CMakeLists.txt  Readme.md
DataPreparation/Shaders/: bgfx_shader.in  compile_shader.sh  fragment.sc  varying.def.sc  vertex.sc
DataPreparation/Textures/: prepare_texture.sh
EnhancedForest/: CMakeLists.txt
EnhancedForest.xcworkspace/: contents.xcworkspacedata
EnhancedForest.xcworkspace/xcuserdata/admin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
EnhancedForest/EnhancedForest.xcodeproj/: project.pbxproj
EnhancedForest/EnhancedForest.xcodeproj/xcshareddata/xcschemes/: EnhancedForest-ios.xcscheme  EnhancedForest-mac.xcscheme
EnhancedForest/EnhancedForest.xcodeproj/xcuserdata/admin.xcuserdatad/xcschemes/: xcschememanagement.plist
EnhancedForest/Resources-osx/: Info.plist
EnhancedForest/bgfx_spec/: bgfx_utils.cpp  bounds.h  example-glue.cpp
EnhancedForest/bgfx_spec/entry/: entry.cpp  entry.hpp  entry_ios.mm  entry_osx.mm  entry_windows.cpp  input.cpp
EnhancedForest/bgfx_spec/entry/allocator/: bxallocator.cpp  bxallocator.hpp
EnhancedForest/bgfx_spec/entry/events/: event_queue.hpp  events.hpp
EnhancedForest/bgfx_spec/entry/filesystem/: fileio.cpp
EnhancedForest/bgfx_spec/entry/window/: impl_at_platform.hpp
EnhancedForest/bgfx_spec/imgui/: fs_imgui_image.bin.h
EnhancedForest/cmake/: target_platform_app.cmake
EnhancedForest/native/OSX/: Info.plist
EnhancedForest/src/: Application.cpp  bgfx_utils.cpp  bgfx_utils.h  bounds.cpp  common.h  example-glue.cpp  logo.h
EnhancedForest/src/Entry/: bgfx_utils.cpp  bounds.inl  dbg.hpp  entry.hpp  entry_ios.mm
EnhancedForest/src/Entry/events/: events.hpp
EnhancedForest/src/Renderer/core/: Camera.cpp  Camera.hpp  Common.h  CoreMesh.cpp  CoreMesh.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex.h  VertexBuffer.cpp  VertexBuffer.hpp
EnhancedForest/src/entry/: cmd.cpp  cmd.h  dbg.h  dialog.cpp  dialog.h  entry.cpp  entry.h  entry.hpp  entry_ios.mm  entry_osx.mm  entry_p.h  entry_windows.cpp  input.cpp  input.h  input.hpp
EnhancedForest/src/entry/allocator/: bxallocator.cpp  bxallocator.hpp
EnhancedForest/src/entry/enums/: base_enums.hpp
EnhancedForest/src/entry/events/: event_queue.hpp  events.hpp
EnhancedForest/src/entry/filesystem/: fileio.cpp  fileio.hpp
EnhancedForest/src/entry/window/: impl_at_platform.hpp  window.hpp
EnhancedForest/src/imgui/: imgui.cpp  imgui.h
scripts/: generate_ios_xcode_project.sh  generate_osx_xcode_project.sh
